@startuml class-orchestration
' Orchestration layer: OVOSemMap owns and wires all subsystems
' Cross-module refs shown as stubs — see class-semantic-core, class-slam, class-datasets

skinparam classAttributeIconSize 10
skinparam classFontSize 12
skinparam packageFontSize 13
skinparam groupInheritance 2
hide empty members

' ─────────────────────────────────────────────
'  ORCHESTRATION
' ─────────────────────────────────────────────
package "Orchestration (ovo/entities/ovomapping.py, ovo/entities/run_config.py)" as OrchestrationPkg #DDEEFF {

  class OVOSemMap {
    + config : Dict
    + output_path : Path
    + run_config : RunConfig
    + vis : VisConfig
    + scheduling : SchedulingConfig
    + logger : Logger
    + dataset : BaseDataset
    + ovo : OVO
    + slam_backbone : VanillaMapper
    + vis_manager : VisualizationManager
    + first_frame : int
    --
    + run() : None
    + save_representation() : None
    + restore_representation() : None
    - _setup_output_path(output_path) : None
    - _run_semantic_step(frame_state: FrameState) : float
    - _run_mapping_and_fusion_step(frame_state: FrameState) : float
    - _should_run_segmentation(frame_id) : bool
    - _should_run_mapping(frame_id) : bool
    - _should_process_frame(frame_id) : bool
    - _get_frame_state(frame_id) : FrameState
    }

    note right of OVOSemMap
      **Omitted Internal Methods:**
      - __init__
      - _init_run_config / _vis_config / _scheduling
    end note

  class FrameState <<dataclass>> {
    + frame_id : int
    + frame_data : Any
    + estimated_c2w : Tensor
  }

  class VisConfig <<dataclass>> {
    + stream : bool
    + show_stream : bool
    + vis_type : str
    + rerun_visual_mode : Any
    + save_rrd : bool
    --
    + {static} from_config(config) : VisConfig
  }

  class SchedulingConfig <<dataclass>> {
    + map_every : int
    + segment_every : int
    + track_every : int
    --
    + {static} from_config(config) : SchedulingConfig
  }

  class RunConfig <<dataclass>> {
    + device : str
    + dataset_name : str
    + scene_name : str
    + use_wandb : bool
    + restore_map : bool
    + debug : bool
    + debug_info : bool
    + slam_module : str
    + save_estimated_cam : bool
    + eval : bool
    --
    + {static} from_config(config) : RunConfig
  }

  class Logger {
    + output_path : Path
    + pid : int | None
    + stats : Dict[str, list]
    + use_wandb : bool
    + start_time : float
    --
    + start_session() : None
    + record_step(duration: float) : None
    + record_frame_end(frame_id: int, duration: float) : None
    + finalize(total_items: int) : None
    + log_fusion_decisions(frame_id: int, decisions: list) : None
    + log_ovo_stats(stats: Dict, print_output: bool) : None
    + log_fps(avg_fps: float) : None
    + log_spf(spf: float) : None
    + log_total_time(total_time: float) : None
    + log_memory_usage(frame_id: int) : None
    + log_max_memory_usage() : None
    + write_stats() : None
    + print_final_stats() : None
    - _fusion_log_path() : Path
    - _init_fusion_log() : None
  }
}

' ─────────────────────────────────────────────
'  VISUALIZATION MANAGEMENT
' ─────────────────────────────────────────────
package "Visualization (ovo/entities/visualizers/manager.py)" as VisPkg #E1F5FE {
  class VisualizationManager {
    + vis : VisConfig
    + cam_data : Dict
    + process : mp.Process
    + mpqueue : mp.Queue
    + query_flag : mp.Value
    + query_pipe : mp.Pipe
    --
    + start(ovo, output_path, scene_name, show_stream) : None
    + stop(drain) : None
    + send_stream_frame(frame_id, slam_backbone, ovo) : None
    + send_update_map(frame_id, slam_backbone, n_fused, decisions) : None
    + handle_semantic_queries(ovo) : None
  }
}

package "Visualization Process" #FFF2CC {
  class "Visualizer (Process)" as VisProc <<external>> {
    + target: select_visualizer_target(vis_type)
  }
}

' ─────────────────────────────────────────────
'  STUBS — see respective diagrams for detail
' ─────────────────────────────────────────────
class OVO <<semantic-core>>
class VanillaMapper <<slam>>
class BaseDataset <<datasets>>

' ─────────────────────────────────────────────
'  RELATIONSHIPS
' ─────────────────────────────────────────────
OVOSemMap *-- OVO                  : ovo
OVOSemMap *-- Logger               : logger
OVOSemMap *-- RunConfig            : run_config
OVOSemMap *-- VisConfig            : vis
OVOSemMap *-- SchedulingConfig     : scheduling
OVOSemMap *-- VisualizationManager : vis_manager
OVOSemMap o-- BaseDataset          : dataset
OVOSemMap o-- VanillaMapper        : slam_backbone
OVOSemMap ..> FrameState           : creates

' Visualization connection
VisualizationManager ..> VisProc : spawns & streams data >
@enduml
